--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -208,8 +208,8 @@ ping_1 : "يتم الحساب!!!!"
 ping_2 : "{0} \n يعمل بشكل جيد مع الاتصال من \n `{1}` في الثانية.\n\nالجهوزية بوت هو {2} \n واستخدم ما مجموعه {3} تخزين الخادم.\n تحميل وحدة المعالجة المركزية حوالي {4} \n مع استهلاك  {5} \n الرام العميل لديه أيضًا اختبار اتصال جيد لـ `{6}` في الثانية."
 
 # Song
-song_1 : "يمكنك التنزيل من يوتيوب فقط في محادثة خاصة. الرجاء ارسال الامر في خاص البوت."
-song_2 : "**مثال:**\nتنزيل [الاسم] or [الرابط من يوتيوب]\n تنزيل + اسم   السوره   او رابط"
+song_1 : "لم يتم اضافة الميزة"
+song_2 : "لم يتم اضافة الميزة"
 song_3 : "تم كشف الرابط. انا غير قادر على تنزيل البث المباشر. "
 song_4 : "**🔗العنوان:**- {0}\n\nاختر ما تريد تنزيله ."
 song_5 : "رابط غير صالح"
